Fix navbar overflow

--- a/frontend/src/containers/Navbar/Navbar.css
+++ b/frontend/src/containers/Navbar/Navbar.css
@@ -6,7 +6,7 @@
 /*   By: lde-la-h <lde-la-h@student.codam.nl>         +#+                     */
 /*                                                   +#+                      */
 /*   Created: 2022/09/08 17:11:11 by lde-la-h      #+#    #+#                 */
-/*   Updated: 2022/09/19 17:11:38 by lde-la-h      ########   odam.nl         */
+/*   Updated: 2022/09/19 17:41:16 by lde-la-h      ########   odam.nl         */
 /*                                                                            */
 /* ************************************************************************** */
 
@@ -23,18 +23,25 @@
     gap: 8px;
     height: 100vh;
     min-width: var(--navbar-width);
-    overflow: hidden;
     background: var(--component-background);
 	box-shadow: 5px 0px 15px -8px rgba(0,0,0,0.5);
+    overflow-y: auto;
+    scroll-behavior: smooth;
+}
+
+.main-navbar::-webkit-scrollbar {
+	display: none;
+}
+
+/*/////////////////////////////////////////////////////////////////////////////*/
+
+.main-navbar-top-items {
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
 }
 
 .nav-item-text {
 	font-size: 8px;
 	margin: 0px;
-}
-
-.main-navbar-top-items {
-	display: flex;
-    flex-direction: column;
-	gap: 8px;
 }
